k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shelter
  labels:
    app: dom-za-milenicinja
