k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: shelter
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: shelter
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: shelter
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
